# cab_demand_prediction

./: README.md  pyproject.toml
cab_demand_prediction_jpcn/: data.py
notebooks/: 00_test_package.ipynb  01_download_raw_data.ipynb  02_validate_raw_data.ipynb  03_aggregate_raw_data.ipynb
