[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cab_demand_prediction_jpcn"
version = "0.0.1"
authors = [
  { name="João Nogueira", email="joaopcnogueira@gmail.com" },
]
description = "A package with tools to help predict the cab's demand in NYC"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/joaopcnogueira/cab_demand_prediction"
